# PiCalc

./: .gitignore  .gitmodules  BLEManager.cpp  BLEManager.h  BTKeyboard.cpp  BTKeyboard.h  BTManager.cpp  BTManager.h  BTRenderer.cpp  BTRenderer.h  CMakeLists.txt  Calculator.cpp  Calculator.h  CalculatorOption.cpp  CalculatorOption.h  CalculatorWindow.cpp  CalculatorWindow.h  CasioOS.cpp  CasioOS.sln  CasioOS.vcxproj  CasioOS.vcxproj.filters  Chars.cpp  Chars.h  ConsoleRenderer.cpp  ConsoleRenderer.h  Constants.h  Decimal.cpp  Decimal.h  DisplayRenderer.cpp  DisplayRenderer.h  Equation.cpp  Equation.h  Graphics.cpp  Graphics.h  I2CUtils.cpp  IKeyboard.cpp  IKeyboard.h  IRenderItem.cpp  IRenderItem.h  IRenderer.cpp  (+52 more)
.fleet/: run.json  settings.json
.github/workflows/: build-master-release.yml  cmake-build-linux-and-pico.yml  cmake-multi-platform.yml  cmake-single-platform.yml
.run/: Build Debug CasioOS.run.xml  Build Debug PiCalc.run.xml  Build Release CasioOS.run.xml  Build Release PiCalc.run.xml  Run CasioOS (Debug).run.xml  Run CasioOS (Release).run.xml  Run Graphics Designer.run.xml  Run Key Map Creator.run.xml  Run PiCalc (Debug).run.xml  Run PiCalc (Release).run.xml  Run Pico Keyborad-Map Creator.run.xml
Graphics Designer/: KeySetCreator.py  Keymap.txt  README.md  keyMapCreator.py  main.py  picoKeyboardMapCreator.py  readme.md  readme.txt  result.txt  test.cpp
Keyboard Layout/: keyboard_layout.xcf
SDL2/include/: SDL_rwops.h
lib/: CMakeLists.txt
lib/httplib/: httplib.h
lib/openssh/include/openssl/: configuration.h
notes/: write_test.txt
persistence/notes/: 2.txt  abc.txt
src/: .clang-format  BTKeyboard.cpp  BTKeyboard.h  BTManager.cpp  BTManager.h  BTRenderer.cpp  BTRenderer.h  Bitset2D.cpp  Bitset2D.h  CMakeLists.txt  CalculatorOption.h  CalculatorWindow.cpp  CalculatorWindow.h  CasioOS.cpp  Chars.cpp  Chars.h  ConsoleRenderer.cpp  ConsoleRenderer.h  Constants.h  DisplayRenderer.cpp  DisplayRenderer.h  DynamicBitset.cpp  DynamicBitset.h  Equation.cpp  Equation.h  Graphics.cpp  Graphics.h  I2CUtils.cpp  I2CUtils.h  IKeyboard.cpp  IKeyboard.h  IRenderer.cpp  IRenderer.h  IStreamBufferReceiver.h  InstanceSelectionWindow.cpp  InstanceSelectionWindow.h  LCDConstants.h  MainMenuWindow.cpp  MenuOption.h  MenuWindow.cpp  (+26 more)
src/bluetooth/: BTKeyboard.cpp  BTKeyboard.h  BTManager.cpp  BTManager.h  BTOut.cpp  BTOut.h  BTRenderer.cpp  BTRenderer.h
src/calculator/: Equation.cpp  Equation.h
src/constant/: Chars.cpp  Chars.h  Constants.cpp  Constants.h  Error.cpp  Error.h  Graphics.cpp  Graphics.h  LCDConstants.h  PicoOTAConfig.h
src/datastructs/: Bitset2D.cpp  Bitset2D.h  Decimal.cpp  Decimal.h  DynamicBitset.cpp  DynamicBitset.h  Equation.cpp  Equation.h  Frame.h  Number.cpp  Number.h  NumberParser.cpp  NumberParser.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h
src/http/: DesktopHttpClient.cpp  DesktopHttpClient.h  HttpHeaders.h  HttpParams.h  HttpRequest.h  HttpResponse.h  IHttpClient.cpp  IHttpClient.h  PicoHttpClient.cpp  PicoHttpClient.h
src/io/: ConfigSerializable.cpp  ConfigSerializable.h  IFileHandler.h  IFileIO.h  IOController.cpp  IOController.h  IOControllerPC.cpp  IOControllerPico.cpp  ISerializable.cpp  ISerializable.h  NoteSerializable.cpp  NoteSerializable.h  PaintingSerializable.cpp  PaintingSerializable.h  PicoIOController.cpp  PicoOTASerializable.cpp  PicoOTASerializable.h  SDCardController.cpp  SDCardController.h  SDCardHWConfig.cpp  SDCardHWConfig.h  hw_config.c  hw_config.cpp
src/keyboard/: IKeyboard.cpp  IKeyboard.h  KeyPress.h  Keyboard.cpp  Keyboard.h  KeyboardPC.cpp  PicoKeyboard.cpp  PicoKeyboard.h  SDLKeyboard.cpp  SDLKeyboard.h
src/options/: CalculatorOption.cpp  CalculatorOption.h  CallbackMenuOption.h  MenuOption.cpp  MenuOption.h  MenuOptionBase.h  SettingsOption.cpp  SettingsOption.h  SysInfoOption.cpp  SysInfoOption.h  TextMenuOption.h  ValueMenuOption.h  WindowMenuOption.h
src/renderers/: ConsoleRenderer.cpp  ConsoleRenderer.h  DisplayRenderer.cpp  DisplayRenderer.h  IRenderer.cpp  IRenderer.h  Renderer.h
src/stream_buffer/: IStreamBufferReceiver.h  StreamBufferCapturer.cpp  StreamBufferCapturer.h
src/threading/: Thread.h  Threading.cpp  Threading.h
src/utils/: I2CUtils.cpp  I2CUtils.h  Utils.cpp  Utils.h
src/windows/: BatteryWindow.cpp  BatteryWindow.h  CalculatorWindow.cpp  CalculatorWindow.h  ChatGPTWindow.cpp  ChatGPTWindow.h  ChatWindow.cpp  ChatWindow.h  ContrastWindow.cpp  ContrastWindow.h  FileOptionsMenu.h  FileOptionsMenuWindow.h  FileSelectWindow.h  InputWindow.cpp  InputWindow.h  InstanceSelectionWindow.cpp  InstanceSelectionWindow.h  MainMenuWindow.cpp  MainMenuWindow.h  MenuWindow.cpp  MenuWindow.h  NotesWindow.cpp  NotesWindow.h  PaintWindow.cpp  PaintWindow.h  PongWindow.cpp  PongWindow.h  SettingsWindow.cpp  SettingsWindow.h  SysInfoWindow.cpp  SysInfoWindow.h  TetrisWindow.cpp  TetrisWindow.h  TextWindow.cpp  TextWindow.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h  WolframAlphaWindow.cpp  (+1 more)
